--- a/blueprints/site/templates/site/search.html
+++ b/blueprints/site/templates/site/search.html
@@ -44,7 +44,7 @@
                     <div class="control-group no-vmargin">
                         <div class="controls">
                             <button type="submit" class="btn btn-large btn-primary"><i class="icon-search icon-white"></i> Найти</button>
-                            <button type="reset" class="btn btn-large">Очистить</button>
+                            <button type="reset" class="btn btn-large" id="reset">Очистить</button>
                         </div>
                     </div>
                 </fieldset>
@@ -220,6 +220,9 @@
             if(old_specilality != $(this).val()){
                 get_person($lpu.val(), $(this).val());
             }
+        });
+        $('#reset').click(function(){
+            $('#search_result').html("");
         });
         $('#search_form').submit(function(event){
             $('#search_result').html("");
