--- a/blueprints/site/templates/site/_top.html
+++ b/blueprints/site/templates/site/_top.html
@@ -5,8 +5,8 @@
 <div class="no_print prog_trckr_menu">
         <ol class="prog_trckr" data-progtrckr-steps="6">
             <li><div style="position: relative;">
-                {% if session.get('step') >= 1 %}<a href="{{ url_for('.index') }}">{% else %}<a class="muted">{% endif %} Шаг 1 </a>
                 <div class="borderLeft {% if session.get('step') >= 1 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
+                {% if session.get('step') >= 1 %}<a href="{{ url_for('.index') }}">{% else %}<a class="muted">{% endif %} Шаг 1
                 <div class="middleText">
                     {% if session.get('step') > 1 %}
                         <span class="prog_trckr_checkmark">&#10003;</span>
@@ -14,11 +14,12 @@
                         <span class="omicron">&Omicron;</span>
                     {% endif %}
                 </div>
+                </a>
                 <div class="borderRight {% if session.get('step') > 1 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
                 </div></li><!--
             --><li><div style="position: relative;">
-            {% if session.get('step') >= 2 %}<a href="{{ url_for('.lpu', okato=session.get('okato')) }}">{% else %}<a style="" class="muted">{% endif %} Шаг 2</a>
-            <div class="borderLeft {% if session.get('step') >= 2 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
+                <div class="borderLeft {% if session.get('step') >= 2 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
+                {% if session.get('step') >= 2 %}<a href="{{ url_for('.lpu', okato=session.get('okato')) }}">{% else %}<a style="" class="muted">{% endif %} Шаг 2
                 <div class="middleText">
                     {% if session.get('step') > 2 %}
                         <span class="prog_trckr_checkmark">&#10003;</span>
@@ -26,11 +27,12 @@
                         <span class="omicron">&Omicron;</span>
                     {% endif %}
                 </div>
+                </a>
             <div class="borderRight {% if session.get('step') > 2 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
             </div></li><!--
             --><li {% if session.get('step') > 3%}class="prog_trckr_done"{% else %}class="prog_trckr_todo"{% endif %}><div style="position: relative;">
-            {% if session.get('step') >= 3 %}<a href="{{ url_for('.division', lpu_id=session.get('lpu_id')) }}">{% else %}<a class="muted">{% endif %}Шаг 3</a>
             <div class="borderLeft {% if session.get('step') >= 3 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
+            {% if session.get('step') >= 3 %}<a href="{{ url_for('.division', lpu_id=session.get('lpu_id')) }}">{% else %}<a class="muted">{% endif %}Шаг 3
                 <div class="middleText">
                     {% if session.get('step') > 3 %}
                         <span class="prog_trckr_checkmark">&#10003;</span>
@@ -38,11 +40,12 @@
                         <span class="omicron">&Omicron;</span>
                     {% endif %}
                 </div>
+            </a>
             <div class="borderRight {% if session.get('step') > 3 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
             </div></li><!--
             --><li {% if session.get('step') > 4 %}class="prog_trckr_done"{% else %}class="prog_trckr_todo"{% endif %}><div style="position: relative;">
-            {% if session.get('step') >= 4 %}<a href="{{ url_for('.tickets', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), doctor_id=session.get('doctor_id')) }}">{% else %}<a class="muted">{% endif %}Шаг 4</a>
             <div class="borderLeft {% if session.get('step') >= 4 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
+            {% if session.get('step') >= 4 %}<a href="{{ url_for('.tickets', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), doctor_id=session.get('doctor_id')) }}">{% else %}<a class="muted">{% endif %}Шаг 4
                 <div class="middleText">
                     {% if session.get('step') > 4 %}
                         <span class="prog_trckr_checkmark">&#10003;</span>
@@ -50,11 +53,12 @@
                         <span class="omicron">&Omicron;</span>
                     {% endif %}
                 </div>
+            </a>
             <div class="borderRight {% if session.get('step') > 4 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
             </div></li><!--
             --><li {% if session.get('step') > 5 %}class="prog_trckr_done"{% else %}class="prog_trckr_todo"{% endif %}><div style="position: relative;">
-            {% if session.get('step') >= 5 %}<a href="{{ url_for('.registration', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), doctor_id=session.get('doctor_id')) }}">{% else %}<a class="muted">{% endif %}Шаг 5</a>
             <div class="borderLeft {% if session.get('step') >= 5 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
+            {% if session.get('step') >= 5 %}<a href="{{ url_for('.registration', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), doctor_id=session.get('doctor_id')) }}">{% else %}<a class="muted">{% endif %}Шаг 5
                 <div class="middleText">
                     {% if session.get('step') > 5 %}
                         <span class="prog_trckr_checkmark">&#10003;</span>
@@ -62,11 +66,12 @@
                         <span class="omicron">&Omicron;</span>
                     {% endif %}
                 </div>
+            </a>
             <div class="borderRight {% if session.get('step') > 5 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
             </div></li><!--
             --><li {% if session.get('step') > 6 %}class="prog_trckr_done"{% else %}class="prog_trckr_todo muted"{% endif %}><div style="position: relative;">
-            {% if session.get('step') >= 6 %}<a class="muted" href="">{% else %}<a class="muted">{% endif %}Шаг 6</a>
             <div class="borderLeft {% if session.get('step') >= 6 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
+            {% if session.get('step') >= 6 %}<a class="muted" href="">{% else %}<a class="muted">{% endif %}Шаг 6
                 <div class="middleText">
                     {% if session.get('step') > 6 %}
                         <span class="prog_trckr_checkmark">&#10003;</span>
@@ -74,6 +79,7 @@
                         <span class="omicron">&Omicron;</span>
                     {% endif %}
                 </div>
+            </a>
             <div class="borderRight {% if session.get('step') > 6 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
             </div></li>
         </ol>
