ELREG-144 отображение элементов интерфейса в IE

--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -120,6 +120,7 @@ ol.prog_trckr, ul.prog_trckr_subscr {
 
 ol.prog_trckr li {
     display: inline-block;
+    *display: inline;
     text-align: center;
     padding:0;
     line-height: 3em;
