Buttons style in earch_lpu

--- a/blueprints/site/templates/site/search_lpu.html
+++ b/blueprints/site/templates/site/search_lpu.html
@@ -42,9 +42,9 @@
         </ul>
     </div>
 </div>
-<a href="{{ url_for('.index') }}" class="btn btn-large"><i class="icon-arrow-left icon-white"></i> Вернуться</a>
+<a href="{{ url_for('.index') }}" class="btn btn-large"><i class="icon-arrow-left"></i> Вернуться</a>
 <p class="pull-right">
-    <a href="{{ url_for('.search') }}" class="btn btn-large" title="Поиск врача"><i class="icon-search icon-white"></i> Поиск врача</a>
+    <a href="{{ url_for('.search') }}" class="btn btn-large" title="Поиск врача"><i class="icon-search"></i> Поиск врача</a>
 </p>
 
     <script type="text/javascript">
