--- a/blueprints/site/templates/site/search_lpu.html
+++ b/blueprints/site/templates/site/search_lpu.html
@@ -59,7 +59,13 @@
             $.getJSON('{{ url_for('.ajax_search') }}', {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
                 var $items = [];
                 $.each(data, function(key, val) {
-                    $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
+                    if (key == '5'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#myModal\').modal();">' + val + '</a></li>');
+                    }else if (key == '15'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#gor2Modal\').modal();">' + val + '</a></li>');
+                    }else{
+                        $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
+                    }
                 });
                 $("#search_table").html($items.join('')).fadeIn('fast');
             });
@@ -76,7 +82,13 @@
             $.getJSON('{{ url_for('.ajax_search') }}', {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
                 var $items = [];
                 $.each(data, function(key, val) {
-                    $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
+                    if (key == '5'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#myModal\').modal();">' + val + '</a></li>');
+                    }else if (key == '15'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#gor2Modal\').modal();">' + val + '</a></li>');
+                    }else{
+                        $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
+                    }
                 });
                 $("#search_table").html($items.join('')).fadeIn('fast');
             });
