--- a/blueprints/site/templates/site/tickets.html
+++ b/blueprints/site/templates/site/tickets.html
@@ -48,15 +48,15 @@
                     {% if cell and cell|attr('start') > now %}
                     <td class="{{ cell.status }}">
                         {% if cell.status == 'free' %}
-                            <a href="{{ url_for('.registration', lpu_id=lpu_id, department_id=department_id, doctor_id=doctor_id, d=cell.start|dateformat('yMd'), s=cell.start|datetimeformat('Hmmss', rebase=False), f=cell.finish|datetimeformat('Hmmss', rebase=False)) }}" class="btn btn-block btn-success">{{ cell.start|datetimeformat('H:mm', rebase=False) }}</a>
+                            <a href="{{ url_for('.registration', lpu_id=lpu_id, department_id=department_id, doctor_id=doctor_id, d=cell.start|dateformat('yyyyMMdd'), s=cell.start|datetimeformat('HHmmss', rebase=False), f=cell.finish|datetimeformat('HHmmss', rebase=False)) }}" class="btn btn-block btn-success">{{ cell.start|datetimeformat('HH:mm', rebase=False) }}</a>
                         {% elif cell.status == 'locked' or cell.status == 'disabled' %}
-                            <span class="btn btn-block btn-danger disabled">{{ cell.start|datetimeformat('H:mm', rebase=False) }}</span>
+                            <span class="btn btn-block btn-danger disabled">{{ cell.start|datetimeformat('HH:mm', rebase=False) }}</span>
                         {% else %}
-                            <span class="btn btn-block btn-danger disabled{% if cell.start|datetimeformat('H:mm', rebase=False) %} btn-inverse{% endif %}">{{ cell.start|datetimeformat('H:mm', rebase=False)|default("&nbsp;") }}</span>
+                            <span class="btn btn-block btn-danger disabled{% if cell.start|datetimeformat('HH:mm', rebase=False) %} btn-inverse{% endif %}">{{ cell.start|datetimeformat('H:mm', rebase=False)|default("&nbsp;") }}</span>
                         {% endif %}
                     {% elif cell %}
                     <td align="center">
-                        <span class="btn btn-block btn-danger disabled{% if cell.start|datetimeformat('H:mm', rebase=False) %} btn-inverse{% endif %}">{{ cell.start|datetimeformat('H:mm', rebase=False)|default("&nbsp;") }}</span>
+                        <span class="btn btn-block btn-danger disabled{% if cell.start|datetimeformat('HH:mm', rebase=False) %} btn-inverse{% endif %}">{{ cell.start|datetimeformat('H:mm', rebase=False)|default("&nbsp;") }}</span>
                     {% else %}
                     <td align="center">
                         <span class="btn btn-block disabled">&nbsp;</span>
