Изменениы формулировки надписей

--- a/blueprints/site/templates/site/_top.html
+++ b/blueprints/site/templates/site/_top.html
@@ -84,7 +84,7 @@
             </div></li>
         </ol>
         <ul class="prog_trckr_subscr" data-progtrckr-steps="7">
-            <li class="muted"><small>Муниципальный округ</small></li><!--
+            <li class="muted"><small>Муниципальный образование</small></li><!--
             --><li class="muted"><small>Медицинское учреждение</small></li><!--
             --><li class="muted"><small>Врач</small></li><!--
             --><li class="muted"><small>Время</small></li><!--
