--- a/blueprints/site/templates/site/lpu.html
+++ b/blueprints/site/templates/site/lpu.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if hospitals_list %}
-<div class="alert alert-info"><h4>Выбор ЛПУ</h4>Выберите медицинское учреждение из списка ниже.</div>
+<div class="alert alert-info"><h4>Выбор медицинского учреждения</h4>Выберите медицинское учреждение из списка ниже</div>
 <div class="row-fluid">
     <div class="span12">
         <ul id="search_table" class="nav nav-tabs nav-stacked upper_case">
