--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -46,8 +46,8 @@
 <br />
 <div class="no_print" class="form-horizontal">
     <div class="row-fluid no_print">
-        <div class="span1 no_print"><button type="button" id="btnPrint" class="btn btn-success btn-large" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();"><i class="icon-print icon-white"></i> Распечатать</button></div>
-        <div class="span1 offset10 no_print"><a href="{{ url_for('.index') }}" id="button-ready" class="btn btn-large" name="send" title="Завершить запись на приём"><i class="icon-ok icon-white"></i> Готово</a></div>
+        <div class="span3 no_print"><button type="button" id="btnPrint" class="btn btn-success btn-large" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();"><i class="icon-print icon-white"></i> Распечатать</button></div>
+        <div class="span2 offset7 no_print"><a href="{{ url_for('.index') }}" id="button-ready" class="btn btn-large" name="send" title="Завершить запись на приём"><i class="icon-ok"></i> Готово</a></div>
     </div>
 </div>
 </div>
