--- a/blueprints/site/templates/site/_top.html
+++ b/blueprints/site/templates/site/_top.html
@@ -71,9 +71,9 @@
             </div></li><!--
             --><li {% if session.get('step') > 6 %}class="prog_trckr_done"{% else %}class="prog_trckr_todo muted"{% endif %}><div style="position: relative;">
             <div class="borderLeft {% if session.get('step') >= 6 %}prog_trckr_done{% else %}prog_trckr_todo{% endif %}"></div>
-            {% if session.get('step') >= 6 %}<a class="muted" href="">{% else %}<a class="muted">{% endif %}Шаг 6
+            {% if session.get('step') >= 6 %}<a>{% else %}<a class="muted">{% endif %}Шаг 6
                 <div class="middleText">
-                    {% if session.get('step') > 6 %}
+                    {% if session.get('step') >= 6 %}
                         <span class="prog_trckr_checkmark">&#10003;</span>
                     {% else %}
                         <span class="omicron">&Omicron;</span>
