--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -5,6 +5,7 @@
 {% set document_code = session.get('document', dict()).get('document_code') %}
 {% set series = session.get('document', dict()).get('series') %}
 {% set number = session.get('document', dict()).get('number') %}
+{% set client_id = session.get('client_id') %}
 <div class="row-fluid">
 <div class="span10 offset1 no_print">
 <table class="no_shadow_print table">
@@ -16,19 +17,19 @@
     {% if client_id %}
     <tr><th>№ Амбулаторной карты:</th><td colspan="2">{{ client_id }}</td></tr>
     {% else %}
-    {% if policy_type == '2' or policy_type == '4' %}
+    {% if policy_type == 2 or policy_type == 4 %}
     <tr><th>Полис ОМС:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
-    {% if policy_type == '1' %}
+    {% if policy_type == 1 %}
     <tr><th>Полис ОМС (временное свидетельство):</th><td colspan="2">{{ number }}</td></tr>
     {% endif %}
-    {% if policy_type == '3' %}
+    {% if policy_type == 3 %}
     <tr><th>Полис ДМС:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
-    {% if document_code == '7' %}
+    {% if document_code == 7 %}
     <tr><th>Военный билет:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
-    {% if document_code == '4' %}
+    {% if document_code == 4 %}
     <tr><th>Удостоверение личности офицера:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
     {% endif %}
