--- a/blueprints/site/templates/site/division.html
+++ b/blueprints/site/templates/site/division.html
@@ -32,7 +32,7 @@
 {% else %}
     <div class="alert alert-error">Данные по подразделениям выбранного медицинского учреждения отсутствуют, попробуйте зайти на страницу позже или выберите другое медицинское учреждение.</div>
 {% endif %}
-<a href="{{ url_for('.lpu', okato=session.get('okato')) }}" class="btn btn-large"><i class="icon-arrow-left"></i> К выбору ЛПУ</a>
+<a href="{{ url_for('.lpu', okato=session.get('okato')) }}" class="btn btn-large"><i class="icon-arrow-left"></i> К выбору мед.учреждения</a>
 <p class="pull-right">
     <a href="{{ url_for('.search', okato=session.get('okato'), lpu_id=lpu_id) }}" class="btn btn-large" title="Поиск врача"><i class="icon-search"></i> Поиск врача</a>
 </p>
