--- a/blueprints/site/templates/site/500.html
+++ b/blueprints/site/templates/site/500.html
@@ -10,7 +10,7 @@
 		{% block content %}
         <legend><h3>Страница недоступна</h3></legend>
         <p>Извините, запрошенная страница недоступна из-за неполадок на сервере.</p>
-        <p>Инженеры извещены, зайдите, пожалуйста, попозже.</p>
+        <p>Инженеры извещены, зайдите, пожалуйста, позже.</p>
         <h4><a href="{{ url_for('.index') }}" title="На главную страницу">На главную</a></h4>
         {% endblock %}
     </section>
