--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -198,7 +198,7 @@ ol.prog_trckr li a{
 /*Clock*/
 .clock {margin:0 auto;padding: 8px;}
 
-.clock #Date { font-family:Arial, Helvetica, sans-serif; text-align:center; }
+.clock .date { font-family:Arial, Helvetica, sans-serif; text-align:center; }
 
 .clock ul {  margin:0 auto; padding:0; list-style:none; text-align:center; }
 .clock ul li { display:inline;  text-align:center; font-family: Arial, Helvetica, sans-serif; }
