--- a/blueprints/site/templates/site/registration.html
+++ b/blueprints/site/templates/site/registration.html
@@ -145,6 +145,7 @@
 <script type="text/javascript">
 $(document).ready(function () {
     $('.unblock_ticket').click(function(event){
+        var url = $(this).attr('href');
         event.preventDefault();
         $.ajax({
             url: "{{ url_for('.unblock_ticket', uid=blocked_ticket['ticket_uid']) }}",
@@ -152,7 +153,7 @@ $(document).ready(function () {
             type: 'POST',
             cache: false // обязательно для IE
         }).done(function(){
-            window.location.href = $(this).attr('href');
+            window.location.href = url;
         });
     });
 });
