Updated admin settings

--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -21,9 +21,16 @@
             {% if field.type != "CSRFTokenField" %}
                 <div class="control-group">
                     <label class="control-label">{{ field.description|safe }}</label>
-                    <div class="controls">
+                    <div class="controls" style="position: relative;">
                         {% if field.type in ('StringField', 'SelectField') %}
                             {{ field(class="span4", title="Необходимо заполнить это поле!") }}
+                        {% elif field.type in ('FileField') %}
+                            {{ field(class="span4", title="Необходимо заполнить это поле!") }}
+                            {% if field.data %}
+                                <div style="position: absolute; right:40%; top: -50px;">
+                                    <img src="{{ url_for('static', filename='i/%s'|format(field.data)) }}">
+                                </div>
+                            {% endif %}
                         {% else %}
                             {{ field(title="Необходимо заполнить это поле!") }}
                         {% endif %}
@@ -34,7 +41,8 @@
 
         <div class="control-group">
             <div class="controls">
-                <button type="submit" class="btn btn-primary">Сохранить</button>
+                <button type="submit" class="btn btn-success btn-large">Сохранить</button>
+                <a href="{{ url_for('index') }}" class="btn btn-large">Отменить</a>
             </div>
         </div>
     </form>
