--- a/blueprints/site/templates/site/search_lpu.html
+++ b/blueprints/site/templates/site/search_lpu.html
@@ -57,10 +57,10 @@
     </div>
 </div>
 <!-- Modal -->
-<div id="gor2Modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="gor2Modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="gor2ModalLabel" aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Запись на приём в<br>ГБУЗ «Городская больница № 2»</h3>
+        <h3 id="gor2ModalLabel">Запись на приём в<br>ГБУЗ «Городская больница № 2»</h3>
     </div>
     <div class="modal-body">
         <p>Для записи на прием перейдите по <a href="{{ url_for('.division', lpu_id=16) }}">ссылке</a>.</p>
@@ -74,6 +74,16 @@
     </div>
     <div class="modal-body">
         <p>Для записи на прием перейдите по <a href="{{ url_for('.division', lpu_id=3) }}">ссылке</a>.</p>
+    </div>
+</div>
+<!-- Modal -->
+<div id="lpu36Modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="lpu36ModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="lpu36ModalLabel">Запись на приём в<br>ГБУЗ «Малосердобинская ЦРБ»</h3>
+    </div>
+    <div class="modal-body">
+        <p>Для записи на прием перейдите по <a href="{{ url_for('.division', lpu_id=33) }}">ссылке</a>.</p>
     </div>
 </div>
     <script type="text/javascript">
@@ -94,6 +104,8 @@
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#gor2Modal\').modal();">' + val + '</a></li>');
                     }else if (key == '8'){
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu8Modal\').modal();">' + val + '</a></li>');
+                    }else if (key == '36'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu36Modal\').modal();">' + val + '</a></li>');
                     }else{
                         $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
                     }
